infra/gke/gke-service.yaml
# gke-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bert-moe-service
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80":"bert-moe-backend-config"}}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: bert-moe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: bert-moe-metrics
spec:
  selector:
    app: bert-moe
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
